# touchcursor-linux

./: .gitignore  CMakeLists.txt  README.md  run_tests.sh  touchcursor.conf  touchcursor.service
src/service/: Bindings.cc  Bindings.h  Config.cc  Config.h  HyperBinding.cc  HyperBinding.h  KeyCodes.cc  KeyCodes.h  binding.cc  binding.h  config.cc  config.h  emit.cc  keys.cc  keys.h  main.cc  mapper.cc  mapper.h
src/test/: testBindings.cc  testKeyCodes.cc
src/tests/: emit.cc  testBindings.cc  testConfiguration.cc  testEmit.cc  testHyperBinding.cc
src/tests/config_files/: config_reordered_tables.conf  reassign_key_configuration.conf  sequence_combination.conf  simple_config.conf  simple_config_multiple_hyper_keys.conf  simple_config_only_specific_hyper_key.conf  simple_config_remap.conf
